[package]
name = "eth_address"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.29", features = ["rand-std"] }
sha3 = "0.10"
rand = "0.8"
rayon = "1.8"
hex = "0.4"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
